# hogehoge

./: .env  .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
.sqlx/: query-237430b680a9b4e1c6a4ac889e7e54111434d6f6c12c533917c38f0750cc9850.json
brickwork/: Cargo.toml
brickwork/src/: lib.rs  ui.rs  widget.rs
brickwork/src/widget/: state.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: audio.rs  lib.rs  library.rs  plugin.rs  theme.rs
migrations/: 0000_initial.sql  20250202031328_initial.sql
museek/: .env
museek/museek-macros/: Cargo.toml
museek/src/: background_task.rs  lib.rs  library.rs
museek/src/ui/: menu_bar.rs
old/brickwork/src/: context.rs
old/brickwork/src/ui/: compute.rs
old/brickwork/src/widget/: layout.rs
old/museek/: Cargo.toml
old/museek/.sqlx/: query-66d649381507ee75394cfd479deba45fa087eda7a557667b3aa245126ce8f53c.json
old/museek/migrations/: 20250202031328_initial.sql
old/museek/museek-macros/src/: lib.rs
old/museek/src/: main.rs
old/museek/src/background_task/: log_layer.rs
old/museek/src/ui/: mod.rs
plugin-builder/: Cargo.toml
plugin-builder/src/: main.rs
plugins/base_formats/: Cargo.toml
plugins/base_formats/src/: lib.rs
plugins/formats/src/: lib.rs
plugins/fs/: Cargo.toml
plugins/fs/src/: lib.rs  tags.rs
src/: audio.rs  library.rs  logging.rs  main.rs  plugin.rs  queue.rs
src/ui/: background_task.rs  library.rs  main_content.rs  mod.rs  notifications.rs  player.rs  side_bar.rs  status_bar.rs  top_bar.rs
themes/ferra/: theme.toml
types/: Cargo.toml
types/src/: lib.rs  library.rs  plugin.rs  theme.rs
