[package]
name = "hogehoge"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true

[workspace]
resolver = "3"
members = ["plugins/*", "types"]
exclude = ["plugin-builder"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "2hoge"
path = "src/main.rs"

[dependencies]
hogehoge-types = { path = "types" }

tokio = { version = "1", features = ["rt-multi-thread"] }

tracing = "0.1"
tracing-subscriber = "0.3"
ansi_term = "0.12.1"

clap = { version = "4.5.39", features = ["derive"] }

extism = "1"

freya = { version = "0.3", features = ["custom-tokio-rt"] }

sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio", "sqlite", "derive", "migrate", "macros" ] }

thiserror = "2"
rayon = "1"
