[package]
name = "hogehoge"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [ "build/*","plugins/*", "types"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
futures = "0.3"
ansi_term = "0.12"

serde = { version = "1", features = ["derive"] }

lofty = "0.22"

thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

extism-convert = { version = "1", default-features = false, features = ["msgpack"] }

glob = "0.3"

toml = "0.8"
tar = "0.4"

[[bin]]
name = "2hoge"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
hogehoge-types = { path = "types", features = ["tracing"] }

tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

tracing.workspace = true
tracing-subscriber = "0.3"
ansi_term.workspace = true

clap.workspace = true

serde.workspace = true

extism = "1"

freya = { version = "0.3", features = [] }

sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio", "sqlite", "derive", "migrate", "macros" ] }

rayon = "1"

thiserror.workspace = true


