[workspace]
resolver = "3"
members = [ "build/*", "plugins/*", "crates/*"]

# [patch.crates-io]
# extism = { git = "https://github.com/Fisch03/extism" }
# extism-convert = { git = "https://github.com/Fisch03/extism" }
# extism-pdk = { git = "https://github.com/Fisch03/rust-pdk" }

[workspace.dependencies]
hogehoge-types = { path = "crates/types" }
hogehoge-db = { path = "crates/db" }

tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
futures-util = { version = "0.3" }

serde = { version = "1", features = ["derive"] }

lofty = "0.22"

thiserror = "2"
strum = { version = "0.27", features = ["derive"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
nu-ansi-term = "0.50"

extism = { git = "https://github.com/Fisch03/extism", default-features = false, features = [ "register-filesystem", "msgpack"] }
extism-convert = { git = "https://github.com/Fisch03/extism", default-features = false, features = ["msgpack"] }
extism-pdk = { git = "https://github.com/Fisch03/rust-pdk", default-features = false, features = ["msgpack"] }

rodio = { version = "0.21", default-features = false }
symphonia = { version = "0.5", features = ["all"] }

sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio", "sqlite", "derive", "migrate", "macros", "uuid" ] }
# sea-query = { version = "0.32", default-features = false, features = ["derive", "backend-sqlite"] }
# sea-query-binder = { version = "0.7", features = ["sqlx-sqlite"] }

freya = { git = "https://github.com/marc2332/freya.git", rev = "0b3b7e2504b3599eacd0ca28b14a3d4034f69910", features = ["custom-tokio-rt"] }

glob = "0.3"

toml = "0.8"
tar = "0.4"

[package]
name = "hogehoge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "2hoge"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 3
# lto = true
# codegen-units = 1

[dependencies]
hogehoge-types = { path = "crates/types", features = ["internal"] }
hogehoge-db.workspace = true
extism.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
futures-util.workspace = true

rodio.workspace = true

clap.workspace = true
nu-ansi-term.workspace = true

serde.workspace = true

freya.workspace = true

rayon = "1"

thiserror.workspace = true

