[package]
name = "hogehoge-db"
version = "0.1.0"
edition = "2024"

[dependencies]
hogehoge-types.workspace = true

freya.workspace = true

sqlx.workspace = true
# sea-query.workspace = true
# sea-query-binder.workspace = true

futures-util.workspace = true
tracing.workspace = true

thiserror.workspace = true
