[package]
name = "hogehoge-types"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", features = ["serde"] }
extism-convert.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
strum.workspace = true

# sea-query.workspace = true

tar = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
concat-with = "0.2.9"

[features]
default = []
internal = ["dep:tracing", "dep:tar", "dep:sqlx"]
