[package]
name = "museek"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["museek-macros"]

[dependencies]
museek-macros = { path = "museek-macros" }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

eframe = { version = "0.30.0", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland"] }
egui = "0.30.0"
egui-phosphor = { version = "0.8.0", default-features = false, features = ["bold"] }

nucleo = "0.5.0"

sqlx = { version = "0.8.3", default-features = false, features = [ "runtime-tokio", "sqlite", "derive", "migrate", "macros" ] }

lipsum = "0.9.1"
tokio = { version = "1.43.0", features = ["full"] }
jwalk = "0.8.1"
anyhow = "1.0.95"
lofty = "0.22.1"
nu-ansi-term = "0.50.1"

